<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:background="@color/material_dynamic_neutral20"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleV2"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewColor"
        android:layout_width="119dp"
        android:layout_height="108dp"
        android:layout_marginTop="16dp"
        android:background="@color/defaultColor"
        android:contentDescription="@string/colorDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textViewHex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hexDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewColor" />

    <TextView
        android:id="@+id/textViewRGB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/defaultRGB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHex" />

    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:max="255"
        android:progress="64"
        app:layout_constraintEnd_toEndOf="@+id/buttonBlue"
        app:layout_constraintStart_toEndOf="@+id/textViewRed"
        app:layout_constraintTop_toBottomOf="@+id/textViewRGB" />

    <TextView
        android:id="@+id/textViewR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:text="@string/redDefault"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBarRed" />

    <TextView
        android:id="@+id/textViewRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/red"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarRed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBarRed" />

    <TextView
        android:id="@+id/textViewGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/greenText"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarGreen"
        app:layout_constraintEnd_toStartOf="@+id/seekBarGreen"
        app:layout_constraintStart_toStartOf="@+id/textViewRed"
        app:layout_constraintTop_toTopOf="@+id/seekBarGreen" />

    <TextView
        android:id="@+id/textViewG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/greenDefault"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarGreen"
        app:layout_constraintStart_toStartOf="@+id/textViewR"
        app:layout_constraintTop_toTopOf="@+id/seekBarGreen" />

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="255"
        android:progress="128"
        app:layout_constraintEnd_toEndOf="@+id/seekBarRed"
        app:layout_constraintStart_toStartOf="@+id/seekBarRed"
        app:layout_constraintTop_toBottomOf="@+id/seekBarRed" />

    <TextView
        android:id="@+id/textViewBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarBlue"
        app:layout_constraintStart_toStartOf="@+id/textViewRed"
        app:layout_constraintTop_toTopOf="@+id/seekBarBlue" />

    <TextView
        android:id="@+id/textViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blueDefault"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarBlue"
        app:layout_constraintStart_toStartOf="@+id/textViewG"
        app:layout_constraintTop_toTopOf="@+id/seekBarBlue" />

    <SeekBar
        android:id="@+id/seekBarBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="255"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="@+id/seekBarGreen"
        app:layout_constraintStart_toStartOf="@+id/seekBarRed"
        app:layout_constraintTop_toBottomOf="@+id/seekBarGreen" />

    <Button
        android:id="@+id/buttonWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/white"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBlack"
        app:layout_constraintEnd_toStartOf="@+id/buttonBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBlack" />

    <Button
        android:id="@+id/buttonBlack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/black"
        app:layout_constraintEnd_toStartOf="@+id/buttonBlue"
        app:layout_constraintStart_toEndOf="@+id/buttonWhite"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBlue" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/buttonBlue"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBlack"
        app:layout_constraintTop_toTopOf="@+id/buttonBlack" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/buttonReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBlack" />

</androidx.constraintlayout.widget.ConstraintLayout>